| Summary: | ASTERISK-22084: ARI: Media operations (playback, start/stop moh) initiated on a channel don't work if that channel is in a bridge | ||
| Reporter: | Jonathan Rose (jrose) | Labels: | Asterisk12 |
| Date Opened: | 2013-07-16 15:57:43 | Date Closed: | 2013-08-13 10:29:03 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | SVN 12 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Working from my code in https://reviewboard.asterisk.org/r/2680/
I discovered that my music on hold operations didn't work while a channel was in a bridge. A similar problem occurs with the playOnChannel operation while a channel is in a bridge. I wasn't actually entirely sure if this was a bug or not on account of the analogous bridge functions for all of these channel functions, but according to Matt this is in fact a known bug that needs to be addressed. | ||
| Comments: | |||